--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header{
 .container{
 width: 85%;
 margin: auto;
+padding: 0%;
 }
 .nav-bar{
     display: flex;
@@ -97,8 +98,68 @@ transition: 0.5;
 
 }
 
+/* service */
 
-@media(max-width:700px){
+.service-section{
+    background: #fff;
+    padding: 100px 0;
+}
+.section-title{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.section-title h2{
+    font-size: 40px;
+    text-transform: capitalize;
+}
+.section-title p{
+    color: aqua;
+    font-size: 18px;
+}
+.service-item{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+.item{
+    width: 23.5%;
+    text-align: center;
+    
+}
+.item img{
+    margin:0 auto 10px;
+}
+.item h3{
+    text-transform: capitalize;
+    color: brown;
+
+}
+.item p{
+    color: cadetblue;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media(max-width:1000px){
     .manu{
         display: none;
     }
@@ -107,6 +168,10 @@ transition: 0.5;
         width: 80%;
         text-align: right;
         font-size: 40px;
+    }
+    .item{
+        width: 49px;
+        margin-bottom: 14px;
     }
 
 }
