--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ transition: 0.5;
 /* service */
 
 .service-section{
-    background: #fff;
+    background:#d2dae2;
     padding: 100px 0;
 }
 .section-title{
@@ -137,8 +137,45 @@ transition: 0.5;
 }
 .item p{
     color: cadetblue;
+    
 }
+.team-section{
+    padding: 100px;
+    background: #fff;
+}
+.team-members{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 
+}
+.member{
+    width: 23.5%;
+    position: relative;
+    overflow: hidden;
+
+}
+.member-overlay{
+    background:rgba(0,0,0,.5);
+    color: #fff;
+    position: absolute;
+bottom:100%;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    transition: .4s;
+    overflow: hidden;
+}
+.member-overlay h4{
+    font-size: 20px;
+}
+.member:hover .member-overlay{
+    bottom:0;
+}
 
 
 
@@ -170,8 +207,33 @@ transition: 0.5;
         font-size: 40px;
     }
     .item{
-        width: 49px;
+        width: 49%;
         margin-bottom: 14px;
     }
+    .item p{
+        width: 265px;
+        margin: 0 auto;
+    }
+}
+@media(max-width:500px){
+    .service-item{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+}
+.item p{
+    width: 164px;
+    margin: 0 auto;
+}
 
+}
+@media(max-width:800px){
+    .member{
+        width: 49%;
+    }
+}
+@media(max-width:550px){
+    .member{
+        width: 100%;
+    }
 }
