--- a/practic.css
+++ b/practic.css
@@ -9,20 +9,17 @@
 body{
     font-family: 'Lato', sans-serif;
 }
-a{
-    text-decoration: none;
-}
-img{
-    width: 100%;
-    height: auto;
-}
-
-
-header{
-    background-color:#95afc0 ;
-    padding: 35px 20px;
-}
 .container{
-    width: 85px;
-    margin: 20px 10px;
+    background: #535c68;
+    width:85% ;
+    margin: auto;
 }
+.nav-bar{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+
+
